# strada-sobreaviso

./: .dockerignore  .gitignore  Dockerfile  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yaml
docs/: colaboradores.md  health.md  index.md  squads.md
strada_sobreaviso/: main.py  rotas.py
strada_sobreaviso/controllers/: colaboradores_controller.py  health_controller.py  squads_controller.py
strada_sobreaviso/controllers/utils/: entity_not_exists.py
strada_sobreaviso/database/: config.py  init_db.py  schemas.py
strada_sobreaviso/endpoints/: health_check.py  squads.py
strada_sobreaviso/models/: colaboradores.py  squads.py
strada_sobreaviso/routes/: api.py
strada_sobreaviso/templates/: index.html
tests/: conftest.py  test_health_check.py  test_squads.py
